# ##############################################################################
# Add subdirectories
# ##############################################################################

add_subdirectory(quadrature)

# ##############################################################################
# Test
# ##############################################################################

setup_test(configuration_helper.cc)
setup_test(autodiff.cc)
setup_test(complex_autodiff.cc)
