# ##############################################################################
# Add subdirectories
# ##############################################################################

add_subdirectory(integration)
add_subdirectory(interpolation)

# ##############################################################################
# Test loop integrals
# ##############################################################################

setup_test(loop_integrals.cc)
