# ##############################################################################
# Add subdirectories
# ##############################################################################

add_subdirectory(solver)

# ##############################################################################
# Test timesteppers
# ##############################################################################

setup_test(sundials_ida.cc)
setup_test(implicit_euler.cc)
setup_test(explicit_euler.cc)
setup_test(trbdf2.cc)
