######################################################################
# Test DG discretization
######################################################################

add_executable(test_dg test_dg.cc)
setup_test(test_dg)

######################################################################
# Test dDG discretization
######################################################################

add_executable(test_ddg test_ddg.cc)
setup_test(test_ddg)

######################################################################
# Test LDG discretization
######################################################################

add_executable(test_ldg test_ldg.cc)
setup_test(test_ldg)