# ##############################################################################
# Tests on CPU
# ##############################################################################

add_executable(test_coordinates_cpu test_coordinates_cpu.cc)
setup_test(test_coordinates_cpu)

# ##############################################################################
# Tests on GPU
# ##############################################################################

if(USE_CUDA)

endif()
